--- a/pages/index.css
+++ b/pages/index.css
@@ -1,3 +1,9 @@
 @import url(../vendor/normalize.css);
 @import url(../vendor/fonts.css);
 @import url(../blocks/page/page.css);
+@import url(../blocks/quote/quote.css);
+@import url(../blocks/quote/__image/quote__image.css);
+@import url(../blocks/quote/__text-container/quote__text-container.css);
+@import url(../blocks/quote/__text/quote__text.css);
+@import url(../blocks/quote/__author/quote__author.css);
+@import url(../blocks/quote/__author-subline/quote__author-subline.css);
