--- a/blocks/quote/__author-subline/quote__author-subline.css
+++ b/blocks/quote/__author-subline/quote__author-subline.css
@@ -1,6 +1,24 @@
 .quote__author-subline {
   margin: 0;
+  color: #E5E5E5;
   font-size: 16px;
   font-weight: 400;
   line-height: 1.75;
+  align-self: end;
+  opacity: 0.7;
+}
+
+@media screen and (max-width: 1023px) {
+  .quote__author-subline {
+    font-size: 13px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .quote__author-subline {
+    font-size: 10px;
+    line-height: 1.6;
+    align-self: start;
+    padding-top: 4px;
+  }
 }
