--- a/blocks/quote/__text/quote__text.css
+++ b/blocks/quote/__text/quote__text.css
@@ -5,3 +5,18 @@
   line-height: 1.29;
   letter-spacing: -0.5px;
 }
+
+@media screen and (max-width: 1023px) {
+  .quote__text {
+    font-size: 28px;
+    line-height: 1.26;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .quote__text {
+    font-size: 23px;
+    padding-top: 40px;
+    max-width: 500px;
+  }
+}
