--- a/pages/index.css
+++ b/pages/index.css
@@ -3,6 +3,7 @@
 @import url(../blocks/page/page.css);
 @import url(../blocks/quote/quote.css);
 @import url(../blocks/quote/__image/quote__image.css);
+@import url(../blocks/quote/__image/_size/quote__image_size.css);
 @import url(../blocks/quote/__text-container/quote__text-container.css);
 @import url(../blocks/quote/__text/quote__text.css);
 @import url(../blocks/quote/__author/quote__author.css);
