header and lead

--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,9 +1,10 @@
 .page {
   max-width: 1440px;
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
   background-color: #333;
   color: #fff;
+  box-sizing: border-box;
   font-family: 'Inter', 'Arial', sans-serif;
   font-style: normal;
   -moz-osx-font-smoothing: grayscale;
