--- a/pages/index.css
+++ b/pages/index.css
@@ -1,3 +1,12 @@
 @import url(../vendor/normalize.css);
 @import url(../vendor/fonts.css);
 @import url(../blocks/page/page.css);
+@import url(../blocks/header/header.css);
+@import url(../blocks/header/__links/header__links.css);
+@import url(../blocks/header/__link/header__link.css);
+@import url(../blocks/lead/lead.css);
+@import url(../blocks/lead/__title/lead__title.css);
+@import url(../blocks/lead/__text/lead__text.css);
+@import url(../blocks/lead/__button/lead__button.css);
+@import url(../blocks/lead/__container/lead__container.css);
+@import url(../blocks/lead/__image/lead__image.css);
