--- a/blocks/header/__link/header__link.css
+++ b/blocks/header/__link/header__link.css
@@ -1,9 +1,9 @@
 .header__link {
   color: #fff;
   text-decoration: none;
-  font-size: 0.875rem;
-  font-weight: normal;
-  line-height: 1.125rem;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 1.06;
   transition: opacity .2s linear;
 }
 
