--- a/blocks/header/__links/header__links.css
+++ b/blocks/header/__links/header__links.css
@@ -1,7 +1,7 @@
 .header__links {
   display: grid;
   grid-template-columns: repeat(3, max-content);
-  gap: 2.125rem;
+  gap: 34px;
   align-items: end;
   list-style: none;
   margin: 0;
