--- a/blocks/lead/__button/lead__button.css
+++ b/blocks/lead/__button/lead__button.css
@@ -1,3 +1,11 @@
 .lead__button {
   max-width: 180px;
+  margin: 0;
+  padding: 0;
+  background: #319E75;
+  font-size: 14px;
+  line-height: 1.28;
+  letter-spacing: 1px;
+  text-align: center;
+  color: #FFF;
 }
