--- a/blocks/lead/__text/lead__text.css
+++ b/blocks/lead/__text/lead__text.css
@@ -1,3 +1,9 @@
 .lead__text {
-  max-width: 460px;
+  margin: 0;
+  padding: 50px 0 50px;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.55;
+  color: #E6E6E6;
+  opacity: .7;
 }
