--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,7 +1,8 @@
 .lead__title {
-  max-width: 31.94vw;
   margin: 0;
-  font-size: 3.4375rem;
+  padding: 0;
+  font-size: 55px;
   font-weight: 700;
-  line-height: 3.75rem;
+  line-height: 1.09;
+  letter-spacing: -0.5px;
 }
