--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,9 +1,5 @@
 .lead {
   display: flex;
-  flex-direction: column;
-  min-height: 836px;
-  background-image: url(../../images/lead/background.jpg);
-  background-repeat: no-repeat;
-  position: relative;
-  background-position: bottom right;
+  gap: 250px;
+  padding: 28px 0 0 120px;
 }
