--- a/pages/index.css
+++ b/pages/index.css
@@ -5,10 +5,12 @@
 @import url(../blocks/header/__links/header__links.css);
 @import url(../blocks/header/__link/header__link.css);
 @import url(../blocks/lead/lead.css);
+@import url(../blocks/lead/__description/lead__description.css);
 @import url(../blocks/lead/__title/lead__title.css);
 @import url(../blocks/lead/__text/lead__text.css);
 @import url(../blocks/lead/__button/lead__button.css);
 @import url(../blocks/lead/__container/lead__container.css);
+@import url(../blocks/lead/__background/lead__background.css);
 @import url(../blocks/lead/__image/lead__image.css);
 @import url(../blocks/quote/quote.css);
 @import url(../blocks/quote/__image/quote__image.css);
