--- a/blocks/quote/quote.css
+++ b/blocks/quote/quote.css
@@ -15,7 +15,7 @@
 
 @media screen and (max-width: 1023px) {
   .quote {
-    padding: 60px 40px 60px;
+    padding: 60px 40px;
     grid-template-rows: auto repeat(2, 20px);
     column-gap: 40px;
   }
@@ -32,6 +32,5 @@
 @media screen and (max-width: 424px) {
   .quote {
     padding: 40px 18px;
-
   }
 }
