--- a/blocks/trails/__buttons-container/trails__buttons-container.css
+++ b/blocks/trails/__buttons-container/trails__buttons-container.css
@@ -1,6 +1,17 @@
 .trails__buttons-container {
-  padding-top: 46px;
+  padding-top: 50px;
   max-width: 120px;
   display: flex;
   gap: 20px;
+}
+
+@media screen and (max-width: 767px) {
+  .trails__buttons-container {
+    padding-top: 0;
+    max-width: 58px;
+    gap: 10px;
+    grid-row: 1/2;
+    grid-column: 1;
+    justify-self: end;
+  }
 }
