--- a/blocks/trails/__text/trails__text.css
+++ b/blocks/trails/__text/trails__text.css
@@ -8,3 +8,19 @@
   color: #E5E5E5;
   opacity: 0.7;
 }
+
+@media screen and (max-width: 1023px) {
+  .trails__text {
+    max-width: 400px;
+    font-size: 15px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .trails__text {
+    padding-top: 37px;
+    max-width: 320px;
+    font-size: 12px;
+    line-height: 1.5;
+  }
+}
