--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -14,14 +14,8 @@
   }
 }
 
-@media screen and (max-width: 767px) {
-  .footer {
-    padding: 40px;
-  }
-}
-
 @media screen and (max-width: 424px) {
   .footer {
-    padding: 40px 18px;
+    padding: 60px 18px 25px;
   }
 }
