--- a/blocks/lead/__button/lead__button.css
+++ b/blocks/lead/__button/lead__button.css
@@ -2,10 +2,58 @@
   max-width: 180px;
   margin: 0;
   padding: 0;
-  background: #319E75;
+  background-color: #319E75;
   font-size: 14px;
   line-height: 1.28;
   letter-spacing: 1px;
   text-align: center;
   color: #FFF;
+}
+
+.lead__button:hover {
+  background-color: #4feac8;
+  transition: background-color 1000ms linear;
+}
+
+
+/* 
+.butt {
+ border: 3px solid #218294;
+ font-size: 30px;
+ color: #218294;
+ text-decoration: none;
+ text-transform: uppercase;
+ width: 250px;
+ height: 60px;
+ display: block;
+ text-align: center;
+ line-height: 60px;
+ font-family: Arial, sans-serif;
+ position: relative;
+ transition: .5s;
+ overflow: hidden;
+}
+.butt::before,
+.butt::after {
+ position: absolute;
+ content: '';
+ width: 100%;
+ height: 100%;
+ background: #218294;
+ top: 0;
+ left: -100%;
+ opacity: .5;
+ transition: .3s;
+ z-index: -1;
+}
+.butt::after {
+ opacity: 1;
+ transition-delay: .2s;
+}
+.butt:hover {
+ color: #fff;
+}
+.butt:hover::before,
+.butt:hover::after {
+ left: 0;
 }
