--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,3 +1,7 @@
 .lead__image {
-  max-width: 440px;
+  max-width: 340px;
+  object-fit: cover;
+  border-radius: 20px;
+  display: block;
+  margin: auto;
 }
