--- a/pages/index.css
+++ b/pages/index.css
@@ -11,6 +11,7 @@
 @import url(../blocks/lead/__text/lead__text.css);
 @import url(../blocks/lead/__button/lead__button.css);
 @import url(../blocks/lead/__container/lead__container.css);
+@import url(../blocks/lead/__rectangle/lead__rectangle.css);
 @import url(../blocks/lead/__background/lead__background.css);
 @import url(../blocks/lead/__image/lead__image.css);
 @import url(../blocks/quote/quote.css);
