--- a/blocks/lead/__rectangle/lead__rectangle.css
+++ b/blocks/lead/__rectangle/lead__rectangle.css
@@ -3,9 +3,7 @@
   height: 300px;
   background-color: #F4F4F4;
   border-radius: 20px;
-  position: absolute;
-  z-index: 0;
+  position: sticky;
   top: 466px;
-  left: 630px;
   overflow: hidden;
 }
