--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,6 +1,6 @@
 .lead {
-  display: grid;
-  grid-template-columns: minmax(min-content, 460px) minmax(min-content, 610px);
-  column-gap: 250px;
+  max-width: 1440px;
+  width: 100%;
+  display: flex;
   padding: 28px 0 0 120px;
 }
