--- a/blocks/bicycles/__container/bicycles__container.css
+++ b/blocks/bicycles/__container/bicycles__container.css
@@ -1,3 +1,5 @@
-.bicycles__container {
-
+@media screen and (max-width: 424px) {
+  .bicycles__container:last-child(-n + 2) {
+    border-radius: red 1px solid;
+  }
 }
