--- a/blocks/bicycles/__list/bicycles__list.css
+++ b/blocks/bicycles/__list/bicycles__list.css
@@ -3,3 +3,10 @@
   grid-template-columns: repeat(3, max-content);
   gap: 30px;
 }
+
+@media screen and (max-width: 424px) {
+  .bicycles__list {
+    grid-template-columns: repeat(1, 1fr);
+    margin: 0 18px 20px;
+  }
+}
