--- a/pages/index.css
+++ b/pages/index.css
@@ -32,6 +32,7 @@
 @import url(../blocks/bicycles/bicycles.css);
 @import url(../blocks/bicycles/__list/bicycles__list.css);
 @import url(../blocks/bicycles/__container/bicycles__container.css);
+@import url(../blocks/bicycles/__image/bicycles__image.css);
 
 @import url(../blocks/practices/practices.css);
 @import url(../blocks/practices/__title/practices__title.css);
