style: добавить стили lead

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -2,6 +2,5 @@
   max-width: 1440px;
   display: flex;
   justify-content: flex-end;
-  margin: 0 auto;
-  padding: 28px 120px 0;
+  padding: 28px 120px;
 }
