--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,6 +1,7 @@
 .lead {
-  max-width: 1440px;
+  max-width: 1320px;
   width: 100%;
   display: flex;
   justify-content: space-between;
+  padding: 20px 0 0 120px;
 }
