--- a/blocks/lead/__button/lead__button.css
+++ b/blocks/lead/__button/lead__button.css
@@ -1,31 +1,27 @@
 .lead__button {
-  display: block;
-  position: relative;
-  z-index: 1;
-  max-width: 180px;
-  width: 100%;
+  width: 180px;
   min-height: 50px;
-  margin: 0;
-  padding: 0;
   background-color: #24B47E;
   font-size: 14px;
-  line-height: 1.28;
+  line-height: 1.29;
   letter-spacing: 1px;
-  text-align: center;
   color: #FFF;
-  transition: .4s;
+  border: none;
+  border-radius: 4px;
+  position: relative;
+  z-index: 1;
 }
 
 .lead__button:after {
-  position: absolute;
-  z-index: 0;
   content: "";
+  position: absolute;
+  z-index: -1;
   width: 0;
   height: 100%;
   top: 0;
   right: 0;
   background-color: #319E75;
-  border-radius: 5px;
+  border-radius: 4px;
   transition: all .4s ease;
 }
 
