--- a/pages/index.css
+++ b/pages/index.css
@@ -10,6 +10,9 @@
 @import url(../blocks/lead/__title/lead__title.css);
 @import url(../blocks/lead/__text/lead__text.css);
 @import url(../blocks/lead/__button/lead__button.css);
+@import url(../blocks/lead/__bicycle-model/lead__bicycle-model.css);
+@import url(../blocks/lead/__name/lead__name.css);
+@import url(../blocks/lead/__decoration/lead__decoration.css);
 @import url(../blocks/lead/__container/lead__container.css);
 @import url(../blocks/lead/__image/lead__image.css);
 @import url(../blocks/quote/quote.css);
