style: сделать header адаптивным

--- a/blocks/header/__link/header__link.css
+++ b/blocks/header/__link/header__link.css
@@ -10,3 +10,9 @@
 .header__link:hover {
   opacity: .75;
 }
+
+@media screen and (max-width: 767px) {
+  .header__link {
+    display: none;
+  }
+}
