--- a/blocks/header/__links/header__links.css
+++ b/blocks/header/__links/header__links.css
@@ -7,3 +7,11 @@
   margin: 0;
   padding: 0;
 }
+
+@media screen and (max-width: 767px) {
+  .header__links {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+  }
+}
