--- a/pages/index.css
+++ b/pages/index.css
@@ -4,6 +4,7 @@
 @import url(../blocks/content/content.css);
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__links/header__links.css);
+@import url(../blocks/header/__link-compact/header__link-compact.css);
 @import url(../blocks/header/__link/header__link.css);
 @import url(../blocks/lead/lead.css);
 @import url(../blocks/lead/__description/lead__description.css);
