--- a/blocks/lead/__button/lead__button.css
+++ b/blocks/lead/__button/lead__button.css
@@ -1,15 +1,18 @@
 .lead__button {
   width: 180px;
-  min-height: 50px;
+  height: 50px;
   background-color: #24B47E;
   font-size: 14px;
   line-height: 1.29;
   letter-spacing: 1px;
   color: #FFF;
+  cursor: pointer;
   border: none;
   border-radius: 4px;
   position: relative;
   z-index: 1;
+  grid-row: 3/4;
+  grid-column: 1;
 }
 
 .lead__button:after {
@@ -28,4 +31,12 @@
 .lead__button:hover:after {
   left: 0;
   width: 100%;
+}
+
+@media screen and (max-width: 767px) {
+  .lead__button {
+    grid-row: 4;
+    width: 284px;
+    height: 46px;
+  }
 }
