--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,10 +1,15 @@
 .lead__image {
-  max-width: 440px;
-  object-fit: cover;
-  object-position: center;
-  position: sticky;
-  top: 347px;
-  border-radius: 20px;
-  background-color: #f4f4f4;
-  margin-bottom: 79px;
+  width: 100%;
+  aspect-ratio: 1/1.37;
+  grid-row: 1/5;
+  grid-column: 2/3;
+}
+
+@media screen and (max-width: 767px) {
+  .lead__image {
+    width: 89.4%;
+    grid-row: 2;
+    grid-column: 1;
+    justify-self: end;
+  }
 }
