--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,8 +1,24 @@
 .lead__title {
   margin: 0;
-  padding: 0;
+  padding-top: 65px;
   font-size: 55px;
   font-weight: 700;
   line-height: 1.09;
   letter-spacing: -0.5px;
+  grid-row: 1;
+  grid-column: 1;
+}
+
+@media screen and (max-width: 1023px) {
+  .lead__title {
+    font-size: 43px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .lead__title {
+    padding-top: 0;
+    font-size: 32px;
+    line-height: 1.25;
+  }
 }
