--- a/blocks/trails/trails.css
+++ b/blocks/trails/trails.css
@@ -17,7 +17,7 @@
 
 @media screen and (max-width: 767px) {
   .trails {
-    margin: 40px 40px;
+    margin: 40px;
     padding: 40px 0;
     border-top: 1px solid #E3E3E3;
     display: grid;
