--- a/pages/index.css
+++ b/pages/index.css
@@ -30,6 +30,8 @@
 @import url(../blocks/trails/__button/_right/trails__button_right.css);
 
 @import url(../blocks/bicycles/bicycles.css);
+@import url(../blocks/bicycles/__links/bicycles__links.css);
+@import url(../blocks/bicycles/__link/bicycles__link.css);
 @import url(../blocks/bicycles/__list/bicycles__list.css);
 @import url(../blocks/bicycles/__container/bicycles__container.css);
 @import url(../blocks/bicycles/__image/bicycles__image.css);
