--- a/blocks/bicycles/__image/bicycles__image.css
+++ b/blocks/bicycles/__image/bicycles__image.css
@@ -1,3 +1,12 @@
+.bicycles__image {
+  max-width: 340px;
+  max-height: 340px;
+  width: 100%;
+  padding: 20px;
+  background-color: #F4F4F4;
+  border-radius: 20px;
+}
+
 @media screen and (max-width: 424px) {
   .bicycles__image {
     max-width: 254px;
