--- a/blocks/bicycles/__list/bicycles__list.css
+++ b/blocks/bicycles/__list/bicycles__list.css
@@ -2,6 +2,8 @@
   display: grid;
   grid-template-columns: repeat(3, max-content);
   gap: 30px;
+  margin: 0;
+  padding: 0;
 }
 
 @media screen and (max-width: 424px) {
