--- a/pages/index.css
+++ b/pages/index.css
@@ -37,6 +37,8 @@
 @import url(../blocks/bicycles/__title/bicycles__title.css);
 @import url(../blocks/bicycles/__links/bicycles__links.css);
 @import url(../blocks/bicycles/__link/bicycles__link.css);
+@import url(../blocks/bicycles/__select/bicycles__select.css);
+@import url(../blocks/bicycles/__option/bicycles__option.css);
 @import url(../blocks/bicycles/__list/bicycles__list.css);
 @import url(../blocks/bicycles/__container/bicycles__container.css);
 @import url(../blocks/bicycles/__image/bicycles__image.css);
