--- a/blocks/bicycles/__head/bicycles__head.css
+++ b/blocks/bicycles/__head/bicycles__head.css
@@ -5,3 +5,10 @@
   justify-content: space-between;
   align-items: flex-end;
 }
+
+@media screen and (max-width: 767px) {
+  .bicycles__head {
+    flex-direction: column;
+    align-items: baseline;
+  }
+}
