--- a/blocks/bicycles/__title/bicycles__title.css
+++ b/blocks/bicycles/__title/bicycles__title.css
@@ -6,3 +6,15 @@
   line-height: 1.09;
   letter-spacing: -0.5px;
 }
+
+@media screen and (max-width: 767px) {
+  .bicycles__title {
+    max-width: 284px;
+    font-size: 32px;
+    font-weight: 700;
+    line-height: 1.25;
+    letter-spacing: -0.5px;
+    text-align: left;
+    margin: 0 18px 40px;
+  }
+}
