--- a/blocks/bicycles/bicycles.css
+++ b/blocks/bicycles/bicycles.css
@@ -4,3 +4,10 @@
   flex-direction: column;
   padding: 60px 120px 90px;
 }
+
+@media screen and (max-width: 767px) {
+  .bicycles {
+    max-width: 320px;
+    padding: 80px 18px 120px;
+  }
+}
