--- a/blocks/bicycles/__caption/bicycles__caption.css
+++ b/blocks/bicycles/__caption/bicycles__caption.css
@@ -6,3 +6,9 @@
   line-height: 1.22;
   text-align: left;
 }
+
+@media screen and (max-width: 767px) {
+  .bicycles__caption {
+    text-align: center;
+  }
+} 
