--- a/blocks/bicycles/__container/bicycles__container.css
+++ b/blocks/bicycles/__container/bicycles__container.css
@@ -17,3 +17,9 @@
     display: none;
   }
 }
+
+@media screen and (max-width: 424px) {
+  .bicycles__container:last-of-type {
+    display: none;
+  }
+}
