--- a/blocks/bicycles/__caption/bicycles__caption.css
+++ b/blocks/bicycles/__caption/bicycles__caption.css
@@ -9,6 +9,10 @@
 
 @media screen and (max-width: 767px) {
   .bicycles__caption {
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 1.28;
+    margin: 0 auto;
     text-align: center;
   }
 } 
