--- a/blocks/bicycles/__title/bicycles__title.css
+++ b/blocks/bicycles/__title/bicycles__title.css
@@ -7,6 +7,12 @@
   letter-spacing: -0.5px;
 }
 
+@media screen and (max-width: 1023px) {
+  .bicycles__title {
+    font-size: 44px;
+  }
+}
+
 @media screen and (max-width: 767px) {
   .bicycles__title {
     font-size: 32px;
