--- a/blocks/bicycles/__caption/bicycles__caption.css
+++ b/blocks/bicycles/__caption/bicycles__caption.css
@@ -10,5 +10,9 @@
 @media screen and (max-width: 767px) {
   .bicycles__caption {
     text-align: center;
+    color: #000;
+    font-size: 14px;
+    line-height: 1.29;
+    padding: 0 0 16px;
   }
-} 
+}
