--- a/blocks/bicycles/__container/bicycles__container.css
+++ b/blocks/bicycles/__container/bicycles__container.css
@@ -4,16 +4,24 @@
   padding-top: 120px;
 }
 
-@media screen and (max-width: 767px) {
-  .bicycles__container {
-    max-width: 284px;
-    margin: 0 auto;
-    padding-top: 33px;
+@media screen and (max-width: 1439px) {
+  .bicycles__container:nth-of-type(n + 3) {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 867px) {
+  .bicycles__container:nth-of-type(n + 2) {
+    display: none;
   }
 }
 
 @media screen and (max-width: 767px) {
-  .bicycles__container:nth-of-type(n + 2) {
-    display: none;
+  .bicycles__container {
+    width: 100%;
+    margin: 0 auto;
+    padding-top: 0;
+    background-color: #f4f4f4;
+    border-radius: 20px;
   }
 }
