--- a/blocks/bicycles/__links/bicycles__links.css
+++ b/blocks/bicycles/__links/bicycles__links.css
@@ -5,9 +5,9 @@
   align-items: end;
   list-style: none;
   margin: 0;
-  padding: 0;
+  padding-bottom: 5px;
 }
-  
+
 
 @media screen and (max-width: 767px) {
   .bicycles__links {
