--- a/blocks/bicycles/__list/bicycles__list.css
+++ b/blocks/bicycles/__list/bicycles__list.css
@@ -1,14 +1,14 @@
 .bicycles__list {
   display: grid;
-  grid-template-columns: repeat(3, max-content);
+  grid-template-columns: repeat(auto-fit, 380px);
   gap: 30px;
-  margin: 0;
+  justify-content: space-around;
   padding: 0;
+  margin: 0;
 }
 
 @media screen and (max-width: 767px) {
   .bicycles__list {
-    grid-template-columns: repeat(1, 1fr);
-    margin: 0 18px 20px;
+    grid-template-columns: repeat(auto-fit, 284px);
   }
 }
