--- a/blocks/bicycles/bicycles.css
+++ b/blocks/bicycles/bicycles.css
@@ -5,9 +5,27 @@
   padding: 60px 120px 90px;
 }
 
+@media screen and (max-width: 1279px) {
+  .bicycles {
+    padding: 60px;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .bicycles {
+    padding: 60px 40px;
+  }
+}
+
 @media screen and (max-width: 767px) {
   .bicycles {
+    padding: 40px 40px;
+  }
+}
+
+@media screen and (max-width: 424px) {
+  .bicycles {
     max-width: 320px;
-    padding: 80px 18px 120px;
+    padding: 80px 18px 60px;
   }
 }
