--- a/blocks/bicycles/__select/bicycles__select.css
+++ b/blocks/bicycles/__select/bicycles__select.css
@@ -7,11 +7,10 @@
     display: block;
     max-width: 114px;
     width: 100%;
-    max-height: 30px;
+    height: 30px;
     color: white;
     background-color: #333333;
     border: 1px solid #7D7D7D;
     border-radius: 2px;
-    margin: 0 auto 20px 18px;
   }
 }
