--- a/blocks/bicycles/__head/bicycles__head.css
+++ b/blocks/bicycles/__head/bicycles__head.css
@@ -11,5 +11,7 @@
     flex-direction: column;
     align-items: baseline;
     padding-bottom: 36px;
+    padding-top: 44px;
+    border-top: 1px solid #E3E3E3;
   }
 }
