--- a/blocks/bicycles/__select/bicycles__select.css
+++ b/blocks/bicycles/__select/bicycles__select.css
@@ -5,10 +5,14 @@
 @media screen and (max-width: 767px) {
   .bicycles__select {
     display: block;
+    padding-left: 8px;
     max-width: 114px;
     width: 100%;
     height: 30px;
     color: white;
+    font-size: 11px;
+    font-weight: 600;
+    line-height: 1.27;
     background-color: #333333;
     border: 1px solid #7D7D7D;
     border-radius: 2px;
