--- a/pages/index.css
+++ b/pages/index.css
@@ -42,6 +42,8 @@
 @import url(../blocks/bicycles/__container/bicycles__container.css);
 @import url(../blocks/bicycles/__image/bicycles__image.css);
 @import url(../blocks/bicycles/__caption/bicycles__caption.css);
+@import url(../blocks/bicycles/__points/becycles__points.css);
+@import url(../blocks/bicycles/__points/_activ/becycles__points_activ.css);
 @import url(../blocks/practices/practices.css);
 @import url(../blocks/practices/__title/practices__title.css);
 @import url(../blocks/practices/__text/practices__text.css);
