fix: поправить цвет footer

--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,5 +1,12 @@
 .footer {
+  background-color: #2f2f2f;
   padding: 80px 120px 60px;
+}
+
+@media screen and (min-width: 1440px) {
+  .footer {
+    padding: 80px calc(((100% - 1440px) / 2) + 120px) 60px;
+  }
 }
 
 @media screen and (max-width: 1279px) {
