--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,4 +1,7 @@
 .header {
+  max-width: 1440px;
+  box-sizing: border-box;
+  margin: auto;
   display: flex;
   justify-content: flex-end;
   padding: 28px 120px;
