--- a/pages/index.css
+++ b/pages/index.css
@@ -5,6 +5,7 @@
 @import url(../blocks/header/__links/header__links.css);
 @import url(../blocks/header/__link-compact/header__link-compact.css);
 @import url(../blocks/header/__link/header__link.css);
+@import url(../blocks/content/content.css);
 @import url(../blocks/lead/lead.css);
 @import url(../blocks/lead/__title/lead__title.css);
 @import url(../blocks/lead/__image/lead__image.css);
