--- a/blocks/bicycles/__link/bicycles__link.css
+++ b/blocks/bicycles/__link/bicycles__link.css
@@ -1,6 +1,5 @@
 .bicycles__link {
-  color: #E5E5E5;
-  opacity: .7;
+  color: rgba(230, 230, 230, .7);
   text-decoration: none;
   font-size: 18px;
   font-weight: 600;
