--- a/blocks/practices/__text/practices__text.css
+++ b/blocks/practices/__text/practices__text.css
@@ -4,8 +4,7 @@
   font-size: 18px;
   font-weight: 400;
   line-height: 1.56;
-  color: #E5E5E5;
-  opacity: 0.7;
+  color: rgba(230, 230, 230, .7);
 }
 
 @media screen and (max-width: 1023px) {
