--- a/blocks/quote/__author-subline/quote__author-subline.css
+++ b/blocks/quote/__author-subline/quote__author-subline.css
@@ -1,12 +1,11 @@
 .quote__author-subline {
   margin: 0;
   padding-bottom: 5px;
-  color: #E5E5E5;
+  color: rgba(229, 229, 229, .7);
   font-size: 16px;
   font-weight: 400;
   line-height: 1.75;
   align-self: end;
-  opacity: 0.7;
 }
 
 @media screen and (max-width: 1023px) {
