--- a/blocks/trails/__text/trails__text.css
+++ b/blocks/trails/__text/trails__text.css
@@ -5,8 +5,7 @@
   font-size: 18px;
   font-weight: 400;
   line-height: 1.56;
-  color: #E5E5E5;
-  opacity: 0.7;
+  color: rgba(229, 229, 229, .7);
 }
 
 @media screen and (max-width: 1023px) {
